--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@ select {
   <option value="https://lukefullard.github.io/npsfm_network_graph/Trout_Habitatsnode_graph.html">Trout_Habitats</option>
   <option value="https://lukefullard.github.io/npsfm_network_graph/Water_Allocationnode_graph.html">Water_Allocation</option>
 </select>
-<iframe id="siteFrame" src="https://lukefullard.github.io/npsfm_network_graph/node_graph.html" style="width:100%; height:750; border:none;"></iframe>
+<iframe id="siteFrame" src="https://lukefullard.github.io/npsfm_network_graph/node_graph.html" style="width:100%; height:100%; border:none;"></iframe>
 </body>
 </html>
