--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@ select {
 <body>
 <select id="siteSelect" onchange="loadSite()">
   <option value="https://lukefullard.github.io/npsfm_network_graph/node_graph.html">Entire graph</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Abundance_WBnode_graph.html">Abundance_WB</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Accessibility_&_suitability_WBnode_graph.html">Accessibility_&_suitability_WB</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Diversity_of_Fishnode_graph.html">Diversity_of_Fish</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Habitats_FMUnode_graph.html">Habitats_FMU</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Health_&_Wellbeingnode_graph.html">Health_&_Wellbeing</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Hydroelectric_Supportnode_graph.html">Hydroelectric_Support</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Management_Whangaehu_FMUnode_graph.html">Management_Whangaehu_FMU</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Outstanding_Characteristicsnode_graph.html">Outstanding_Characteristics</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Relationship_&_Connectionnode_graph.html">Relationship_&_Connection</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Trophic_Statenode_graph.html">Trophic_State</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Trout_Habitatsnode_graph.html">Trout_Habitats</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Water_Allocationnode_graph.html">Water_Allocation</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Abundance_WBnode_graph.html">Abundance WB</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Accessibility_&_suitability_WBnode_graph.html">Accessibility & suitability_WB</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Diversity_of_Fishnode_graph.html">Diversity of Fish</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Habitats_FMUnode_graph.html">Habitats FMU</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Health_&_Wellbeingnode_graph.html">Health & Wellbeing</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Hydroelectric_Supportnode_graph.html">Hydroelectric Support</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Management_Whangaehu_FMUnode_graph.html">Management Whangaehu FMU</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Outstanding_Characteristicsnode_graph.html">Outstanding Characteristics</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Relationship_&_Connectionnode_graph.html">Relationship & Connection</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Trophic_Statenode_graph.html">Trophic State</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Trout_Habitatsnode_graph.html">Trout Habitats</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Water_Allocationnode_graph.html">Water Allocation</option>
 </select>
 <iframe id="siteFrame" src="https://lukefullard.github.io/npsfm_network_graph/node_graph.html" style="width:100%; height:100%; border:none;"></iframe>
 </body>
