--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ select {
 <select id="siteSelect" onchange="loadSite()">
   <option value="https://lukefullard.github.io/npsfm_network_graph/node_graph.html">Entire graph</option>
   <option value="https://lukefullard.github.io/npsfm_network_graph/Abundance_WBnode_graph.html">Abundance WB</option>
-  <option value="https://lukefullard.github.io/npsfm_network_graph/Accessibility_&_suitability_WBnode_graph.html">Accessibility & suitability_WB</option>
+  <option value="https://lukefullard.github.io/npsfm_network_graph/Accessibility_&_suitability_WBnode_graph.html">Accessibility & suitability WB</option>
   <option value="https://lukefullard.github.io/npsfm_network_graph/Diversity_of_Fishnode_graph.html">Diversity of Fish</option>
   <option value="https://lukefullard.github.io/npsfm_network_graph/Habitats_FMUnode_graph.html">Habitats FMU</option>
   <option value="https://lukefullard.github.io/npsfm_network_graph/Health_&_Wellbeingnode_graph.html">Health & Wellbeing</option>
